# fild-ui

./: .pylintrc  README.md  setup.cfg
.github/workflows/: publish.yml  test.yml
requirements/: common.txt
