[metadata]
name = fild-ui
version = 0.0.1
author = Elena Kulgavaya
author_email = elena.kulgavaya@gmail.com
description = Operate with Web UI using selenium and fild library
long_description = file: README.md, CHANGELOG.rst, LICENSE.rst
long_description_content_type = text/markdown
url = https://github.com/elenakulgavaya/fild-ui
project_urls =
    Bug Tracker = https://github.com/elenakulgavaya/fild-ui/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    fild_ui
    fild_ui.types
python_requires = >=3.9
install_requires =
    fild>=0.1.0
    fild-compare>=0.0.3
